--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,59 @@
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz
+alabaster==0.7.12
+appdirs==1.4.4
+Babel==2.9.0
+blis==0.7.4
+catalogue==2.0.1
+certifi==2020.12.5
+chardet==4.0.0
+click==7.1.2
+cymem==2.0.5
+distlib==0.3.1
+docutils==0.16
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0-py3-none-any.whl
+filelock==3.0.12
+ghp-import==1.0.1
+idna==2.10
+imagesize==1.2.0
+Jinja2==2.11.3
+joblib==1.0.1
+MarkupSafe==1.1.1
+murmurhash==1.0.5
 nltk==3.5
-numpy==1.18.3
-pyspellchecker==0.5.5
-sense2vec==1.0.2
-spacy==2.3.2
-unidecode==1.1.1
+numpy==1.20.1
+packaging==20.9
+pathy==0.4.0
+Pillow==8.1.0
+pipenv==2020.11.15
+preshed==3.0.5
+pydantic==1.7.3
+Pygments==2.7.4
+pyparsing==2.4.7
+pyspellchecker==0.6.1
+python-dateutil==2.8.1
+pytz==2021.1
+pyzbar==0.1.8
+regex==2020.11.13
+requests==2.25.1
+sense2vec==2.0.0
+smart-open==3.0.0
+snowballstemmer==2.1.0
+spacy==3.0.3
+spacy-legacy==3.0.1
+Sphinx==3.4.3
+sphinx-rtd-theme==0.5.1
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
+srsly==2.4.0
+thinc==8.0.2
+tqdm==4.59.0
+travis-sphinx==2.2.1
+typer==0.3.2
+Unidecode==1.2.0
+urllib3==1.26.3
+virtualenv==20.4.2
+virtualenv-clone==0.5.4
+wasabi==0.8.2
